[package]
name = "eunha"
version = "0.1.0"
edition = "2021"
default-run = "eunha"

[[bin]]
name = "eunha"
path = "src/main.rs"

[[test]]
name = "c2s_api"
path = "tests/c2s_api/mod.rs"

[[bin]]
name = "eunha-upload-media"
path = "src/bin/upload_media.rs"

[[bin]]
name = "eunha-init-r2"
path = "src/bin/init_r2.rs"

[[bin]]
name = "eunha-send-test-push"
path = "src/bin/send_test_push.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart", "macros", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Auth / Crypto
argon2 = "0.5"
bcrypt = "0.15"
rand = "0.9"
base64 = "0.22"
serde_urlencoded = "0.7"
serde_qs = "0.13"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
rsa = { version = "0.9", features = ["sha2", "pem"] }
pkcs8 = { version = "0.10", features = ["pem"] }

# HTTP client (federation)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# ActivityPub federation library
feder-vocab = { git = "https://github.com/limeburst/feder.git" }
feder-core = { git = "https://github.com/limeburst/feder.git" }

# Config / environment
config = "0.15"
dotenvy = "0.15"

# Utilities
url = { version = "2", features = ["serde"] }
urlencoding = "2"
minijinja = "2"
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
mime = "0.3"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bytes = "1"
futures = "0.3"
itertools = "0.14"
indexmap = "2"
regex = "1"
once_cell = "1"
ammonia = "4"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
blurhash = "0.2"
img-parts = "0.4.0"
scraper = "0.23"

# Push notifications (VAPID + Web Push)
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
web-push = "0.10"

# Redis (home timeline fan-out)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
axum-test = "17"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-tungstenite = "0.26"
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
